# kanji-net

./: .gitignore  Cargo.toml  README.md  README.org  data.json  kanjinet.asd
kin/: Cargo.toml
kin/src/: main.rs
kn-core/: Cargo.toml
kn-core/src/: lib.rs  utils.rs
lisp/: package.lisp
