[package]
name = "kin"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
gumdrop = "0.8"
kn-core = { path = "../kn-core" }
petgraph = "0.5"

# TODO Remove
[dependencies.kanji]
version = "1.1"
git = "https://github.com/fosskers/rs-kanji"
rev = "c6508cedd5b57aecd62d37933e13aef7a22c8cf8"
features = ["serde"]

[profile.release]
lto = true
