[package]
name = "kin"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
gumdrop = "0.8"
kn-core = { path = "../kn-core" }

# TODO Remove
[dependencies.kanji]
version = "1.1"
git = "https://github.com/fosskers/rs-kanji"
rev = "85efb94b0f75a4c7bd214bc99ee99717b469f808"
features = ["serde"]

[profile.release]
lto = true
