[package]
name = "kn-core"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
# kanji = { version = "1.1", features = ["serde"] }
petgraph = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.kanji]
version = "1.1"
git = "https://github.com/fosskers/rs-kanji"
rev = "22544f87bb8e7e8f75fcbe06f84aa70d99e2304a"
features = ["serde"]