[package]
name = "kn-core"
version = "0.1.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"

[dependencies]
# kanji = { version = "1.1", features = ["serde"] }
itertools = "0.10"
petgraph = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.kanji]
version = "1.1"
git = "https://github.com/fosskers/rs-kanji"
rev = "85efb94b0f75a4c7bd214bc99ee99717b469f808"
features = ["serde"]